WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182641
Follow-up fixes after moving WebVideoFullscreenController from WebCore to WebKitLegacy.
https://bugs.webkit.org/show_bug.cgi?id=182641
Summary
Follow-up fixes after moving WebVideoFullscreenController from WebCore to Web...
Per Arne Vollan
Reported
2018-02-09 08:49:50 PST
Remove incorrect use of WEBCORE_EXPORT and namespace WebCore after the files were moved in
https://trac.webkit.org/changeset/228308
.
Attachments
Patch
(4.21 KB, patch)
2018-02-09 09:01 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2018-02-09 09:01:17 PST
Created
attachment 333492
[details]
Patch
Per Arne Vollan
Comment 2
2018-02-09 09:58:44 PST
Comment on
attachment 333492
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 3
2018-02-09 10:40:13 PST
Comment on
attachment 333492
[details]
Patch Clearing flags on attachment: 333492 Committed
r228328
: <
https://trac.webkit.org/changeset/228328
>
WebKit Commit Bot
Comment 4
2018-02-09 10:40:14 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-02-09 10:41:23 PST
<
rdar://problem/37396506
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug