Follow-up fixes after moving WebVideoFullscreenController from WebCore to WebKitLegacy. https://bugs.webkit.org/show_bug.cgi?id=182641

Reviewed by Dan Bernstein.

Remove incorrect use of WEBCORE_EXPORT and namespace WebCore after the files were moved in
https://trac.webkit.org/changeset/228308.

* WebView/WebVideoFullscreenController.h:
* WebView/WebVideoFullscreenHUDWindowController.mm:
* WebView/WebWindowAnimation.h:
* WebView/WebWindowAnimation.mm:
(WebCore::WebWindowAnimationDurationFromDuration): Deleted.
(WebCore::scaledRect): Deleted.
(WebCore::squaredDistance): Deleted.


Canonical link: https://commits.webkit.org/198459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228328 268f45cc-cd09-0410-ab3c-d52691b4dbfc