Source/WebKitLegacy/mac/WebView/WebWindowAnimation.mm
@@ -32,8 +32,6 @@
 #import <wtf/Assertions.h>
 #import <wtf/MathExtras.h>
 
-namespace WebCore {
-
 static const CGFloat slowMotionFactor = 10;
 
 static NSTimeInterval WebWindowAnimationDurationFromDuration(NSTimeInterval duration)
@@ -58,12 +56,8 @@ static CGFloat squaredDistance(NSPoint point1, NSPoint point2)
     return deltaX * deltaX + deltaY * deltaY;
 }
 
-}
-
-using WebCore::WebWindowAnimationDurationFromDuration;
 using WebCore::narrowPrecisionToFloat;
-using WebCore::scaledRect;
-using WebCore::squaredDistance;
+
 @implementation WebWindowScaleAnimation
 
 - (id)init
